.kubernetes/dev-php.yaml
apiVersion: v1
kind: Pod
metadata:
    name: dev-php
spec:
    containers:
        - name: php-dev
          image: registry.localhost:5000/learning-symfony-messenger-php:latest
          command: ["tail", "-f", "/dev/null"]
          volumeMounts:
              - name: php-source
                mountPath: /app # directory in container
    volumes:
        - name: php-source
#          emptyDir: {}
          hostPath:
              path: ./ # directory from host
              type: Directory
