.kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
    name: kafka
    labels:
        app: kafka
spec:
    ports:
        - port: 9092
          targetPort: 9092
    selector:
        app: kafka
    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka
    template:
        metadata:
            labels:
                app: kafka
        spec:
            containers:
                - name: kafka
                  image: apache/kafka:3.7.0
                  ports:
                      - containerPort: 9092
                      - containerPort: 9093
                  volumeMounts:
                      - name: kafka-data
                        mountPath: /var/lib/kafka/data
            volumes:
                - name: kafka-data
                  emptyDir: {}
