.kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:16.0-alpine3.18
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - mountPath: /var/lib/postgresql/data
                        name: postgresdata
            volumes:
                -   name: postgresdata
                    emptyDir: { }
#                - name: postgresdata
#                  persistentVolumeClaim:
#                      claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
    name: postgres
    labels:
        app: postgres
spec:
    type: NodePort
    ports:
        - port: 5432
    selector:
        app: postgres
